--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 Flask==2.1.0
-Flask-CORS==3.0.10
 gunicorn==20.1.0
 python-telegram-bot==13.7
-torch==1.8.1
+torch==2.0.1
 numpy==1.22.3
-nltk==3.7.1
-requests==2.27.1
+nltk
+requests==2.31.0
 python-dotenv
 redis
