update config redis

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 TELEGRAM_BOT_TOKEN=5904449520:AAGzkbcjD3RqYeeKp5CSkxGO1xuL1Pi7cuk
-REDIS_HOST=redis-19937.c1.asia-northeast1-1.gce.cloud.redislabs.com
-REDIS_PORT=19937
-REDIS_PASSWORD=9HdXn66XKOrvvAYwVpON3yZdwUzeUWEO
+REDIS_HOST=redis-15084.c26741.asia-seast2-mz.gcp.cloud.rlrcp.com
+REDIS_PORT=15084
+REDIS_PASSWORD=Umce4rmbCFLPfbBYh3whLU7nKJXu0CMt
 FLASK_APP=main.py
