--- a/.env
+++ b/.env
@@ -1,5 +1,15 @@
-TELEGRAM_BOT_TOKEN=5904449520:AAGzkbcjD3RqYeeKp5CSkxGO1xuL1Pi7cuk
-REDIS_HOST=redis-15084.c26741.asia-seast2-mz.gcp.cloud.rlrcp.com
-REDIS_PORT=15084
-REDIS_PASSWORD=Umce4rmbCFLPfbBYh3whLU7nKJXu0CMt
 FLASK_APP=main.py
+TELEGRAM_BOT_TOKEN=5904449520:AAGzkbcjD3RqYeeKp5CSkxGO1xuL1Pi7cuk
+
+# ------------------------------------------------------------------
+# Redis Prod
+# ------------------------------------------------------------------
+ REDIS_HOST=redis-15056.c302.asia-northeast1-1.gce.cloud.redislabs.com
+ REDIS_PORT=15056
+ REDIS_PASSWORD=hXNAZEJLy9CXqyFK6FyASE1XkGy8JlsX
+
+# ------------------------------------------------------------------
+# Redis Dev
+# ------------------------------------------------------------------
+#REDIS_HOST=localhost
+#REDIS_PORT=6379
